# NullReceiver-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a9dadb40c4d_создание_таблицы_user.py  ef11bc016871_изменил_название_столбца.py
contract/server_answer/: error_schema.json  pong_schema.json  private_message_ack_schema.json
contract/server_receive/: ping_schema.json  private_message_schema.json
src/: connection_manager.py  main.py
src/certs/: README.md
src/core/: auth_utils.py  config.py  exceptions.py  log_config.py
src/database/: __init__.py  session.py  uow.py
src/database/models/: base.py  user.py
src/database/repository/: __init__.py  user_repo.py
src/routes/: auth.py  websocket.py
src/schemas/: __init__.py  auth.py
src/schemas/contract/: __init__.py  ack_schema.py  message_schema.py
src/services/: __init__.py  chat_service.py  dispatcher.py  handlers.py  message_router.py  schema_utils.py  ws_connection_manager.py
